[package]
name = "jil-api-rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.0-beta.8"
actix-web = { version = "4.0.0-beta.10" } # uses 1.0 tokio runtime
actix-web-httpauth = "0.6.0-beta.7"
anyhow = "1.0.52"
aws-config = "0.4.1"
aws-sdk-dynamodb = "0.4.1"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.19"
log = "0.4.14"
reqwest = { version = "0.11.8", features = ["blocking"] }
serde = "1"
serde_json = "1"
strum = "0.23.0"
strum_macros = "0.23.1"
tokio = "1.15.0"
tokio-stream = "0.1.8"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
