[package]
name = "jil-api"
version = "0.2.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "jil-api"

[dependencies]
actix-cors = "0.6.1"
actix-web = { version = "4.2.1" } # uses 1.0 tokio runtime
actix-web-httpauth = "0.8.0"
anyhow = "1.0.52"
aws-config = "0.9.0"
aws-sdk-dynamodb = "0.9.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
dynomite = { git = "https://github.com/jameslittle230/dynomite" }
env_logger = "0.9.0"
futures = "0.3.19"
governor = "0.6.0"
log = "0.4.14"
reqwest = { version = "0.11.8", features = ["blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1"
strum = "0.23.0"
strum_macros = "0.23.1"
tokio = { version = "1.15.0", features = ['rt-multi-thread', 'macros'] }
tokio-stream = "0.1.8"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
utoipa = { version = "5.0.0-alpha.1", features = [
    "actix_extras",
    "chrono",
    "uuid",
    "debug",
    "preserve_order",
    "preserve_path_order",
] }
utoipa-scalar = { version = "0.2.0-alpha.0", features = ["actix-web"] }
